resolve Lazy issues